--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pancake-frontend",
+  "name": "crosswise-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -55,7 +55,7 @@
     "bignumber.js": "^9.0.0",
     "canvas-confetti": "^1.3.3",
     "cids": "^1.0.0",
-    "crosswise-uikit": "^0.32.2",
+    "crosswise-uikit": "^0.32.4",
     "date-fns": "^2.21.3",
     "easymde": "^2.15.0",
     "ethers": "^5.1.4",
