--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,7 @@
     "browser": true,
     "jest": true
   },
-  "extends": "@pancakeswap/eslint-config-pancake",
+  "extends": "eslint-config-crosswise",
   "rules": {
     "no-console": ["warn", { "allow": ["info", "warn", "error", "debug"] }],
     "no-plusplus": 0,
