--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "@binance-chain/bsc-connector": "^1.0.0",
     "@ethersproject/experimental": "^5.0.1",
     "@pancakeswap/sdk": "^2.3.2",
-    "@pancakeswap/uikit": "^0.46.0",
     "@reduxjs/toolkit": "^1.5.0",
     "@types/multicodec": "^1.0.0",
     "@types/node": "^13.13.5",
@@ -55,7 +54,7 @@
     "bignumber.js": "^9.0.0",
     "canvas-confetti": "^1.3.3",
     "cids": "^1.0.0",
-    "crosswise-uikit": "^0.32.6",
+    "crosswise-uikit": "^0.32.11",
     "date-fns": "^2.21.3",
     "easymde": "^2.15.0",
     "ethers": "^5.1.4",
@@ -89,7 +88,7 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
-    "@pancakeswap/eslint-config-pancake": "^1.1.0",
+    "eslint-config-crosswise": "^1.0.7",
     "@types/jest": "^26.0.23",
     "@types/react-datepicker": "^3.1.8",
     "@types/react-redux": "^7.1.16",
