--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
-  "short_name": "PancakeSwap",
-  "name": "PancakeSwap",
-  "description": "Farm CAKE with Pancake LP Tokens",
-  "homepage_url": "https://pancakeswap.finance",
+  "short_name": "CrossWise",
+  "name": "CrossWise",
+  "description": "",
+  "homepage_url": "https://crosswise.finance",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#1FC7D4",
