chore: Switch pancake/sdk to crosswise/sdk

--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
   },
   "dependencies": {
     "@binance-chain/bsc-connector": "^1.0.0",
+    "@crosswise/sdk": "^0.0.1",
     "@crosswise/uikit": "^0.2.0",
     "@ethersproject/experimental": "^5.0.1",
-    "@pancakeswap/sdk": "^2.3.2",
     "@pancakeswap/uikit": "^0.46.0",
     "@reduxjs/toolkit": "^1.5.0",
     "@types/multicodec": "^1.0.0",
