feat: pull histories `TradeNow`, realtime tx update

--- a/.env.production
+++ b/.env.production
@@ -10,6 +10,8 @@ REACT_APP_NODE_2 = "https://bsc-dataseed1.defibit.io"
 # 10+ nodes balanced in each region, global
 REACT_APP_NODE_3 = "https://bsc-dataseed.binance.org"
 
+REACT_APP_WSS_NODE_1 = "wss://speedy-nodes-nyc.moralis.io/74ef8961baa2e25faa50a65f/bsc/mainnet/archive/ws"
+
 REACT_APP_GRAPH_API_PROFILE = "https://api.thegraph.com/subgraphs/name/pancakeswap/profile"
 REACT_APP_GRAPH_API_PREDICTION = "https://api.thegraph.com/subgraphs/name/pancakeswap/prediction"
 REACT_APP_GRAPH_API_LOTTERY = "https://api.thegraph.com/subgraphs/name/pancakeswap/lottery"
